1999-07-11  Raja R Harinath  <harinath@cs.umn.edu>

	* acconfig.h (SUN_LEN): Add @BOTTOM@ section and move this
	definition there.

	* configure.in (setenv, putenv): Add checks.
	* esdplay.c (main): Use `putenv' as a fallback if `setenv' isn't
	available. 
	Reported by "Brandon S. Allbery" <allbery@ece.cmu.edu>.
	
1999-06-30 Scott Heavner  <sdh@po.cwru.edu>

	* configure.in, acconfig.h: Change SUN_LEN test to use AC_TRY_LINK.
	Then change it more.  Are #ifdef's allowed in acconfig.h?  Seems
	like cheating, but it works here (autoconf v2.13).  The previous
	incarnation was using AC_DEFINE to setup a macro and wasn't
	working at all.

Mon Jun 28 18:34:10 1999 Timur Bakeyev <mc@bat.ru>

	* acconfig.h, configure.in: Fix checkes against INADDR_LOOPBACK
	and SUN_LEN.
	* esd.h: Fix problem with mkdir() - if directory name containes
	"/" as a last symbol, it'll not be created.
	* esd.c, esdlib.c: Introduced usage of SUN_LEN instead of direct
	calculation. Move inline defenition of SUN_LEN to config.h.

1999-06-22  Richard Boulton <rjb37@cam.ac.uk>

	* esdlib.c: More self documenting code comments.  Nearly done this
	file now...

	* proto.c: Fix proto_data required size for esd_proto_stream_filter,
	so that we don't get annoying click whenever a filter is added.  (Was
	sending 112 junk bytes to the audio stream each time.)

1999-06-19  Richard Boulton <rjb37@cam.ac.uk>

	* esdlib.c, esd_config.c, esd.conf: Put time to wait for an
	autospawn into esd.conf file, and increased default to 100ms.
	(it was at 10ms, and about 1 time in 5 it wasn't waiting long
	enough for me.)

1999-06-19  Richard Boulton <rjb37@cam.ac.uk>

	* esdlib.c: Add some gnome-doc style self documenting code comments.

1999-06-17  Richard Boulton <rjb37@cam.ac.uk>

	* esdlib.c: Fix compiler warning.

Wed Jun 16 12:52:02 1999 Timur Bakeyev <mc@bat.ru>

	* esd.h, esd.c, esdlib.c: All occurances of "/tmp/.esd/socket" string
	changed to macro ESD_UNIX_SOCKET_NAME - this is a bit cleaner, and