@@ -65,7 +65,7 @@ AC_TRY_COMPILE([
     #include<sys/types.h>
     #include<netinet/in.h>],
     [unsigned long ul = INADDR_LOOPBACK;],,
-    [AC_DEFINE(INADDR_LOOPBACK, (u_long)0x7f000001)])
+    [AC_DEFINE(INADDR_LOOPBACK, (u_int32_t)0x7f000001)])
     
 
 dnl Check if SUN_LEN exists
@@ -267,12 +267,13 @@ int deny_severity = LOG_WARNING;],
    LIBS="$esound_save_LIBS"
 fi
 
-dnl build the esddsp wrapper for Linux/FreeBSD only
+dnl build the esddsp wrapper for systems, 
+dnl that support LD_PRELOAD and RTLD_NEXT only
 dsp_ok=no ESDDSP= LIBESDDSP= DL_LIB=
 
 AC_MSG_CHECKING([if your platform supports esddsp])
 case "$host_os" in
-  linux* | freebsd* )
+  linux* | freebsd* | bsdi4* )
     dsp_ok=yes
     ;;
 esac
